definitions/istio_ingress_001.yaml
# How to generate the certs for this file
# openssl req -new -newkey rsa:2048 -days 365 -nodes -x509 -subj "/C=UA/ST=Kyiv/O=SoftServe/CN=softserveinc.com" -keyout key.pem -out cert.pem
# cat cert.pem | base64
# cat key.pem  | base64
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: default
  name: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingressgateway-tls
  namespace: istio-system
spec:
  tls:
  - secretName: istio-ingressgateway-tls-certs
  backend:
    serviceName: istio-ingressgateway
    servicePort: 80

# This is a definition that allows the Ingress HTTPS LB to see the 
# istio ingress gateway on default port
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: default
  name: nginx-healthcheck-only
spec:
  hosts:
  - "*"
  gateways:
  - ingressgateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: nginx-healthcheck-only
        port:
          number: 80

---
kind: Service
apiVersion: v1
metadata:
  namespace: default
  name: nginx-healthcheck-only
spec:
  selector:
    app: nginx-healthcheck-only
  ports:
  - protocol: TCP
    port: 80
    
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  namespace: default
  name: nginx-healthcheck-only
spec:
  selector:
    matchLabels:
      app: nginx-healthcheck-only
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-healthcheck-only
    spec:
      containers:
      - name: nginx-healthcheck-only
        image: nginx:1.7.9
        ports:
        - containerPort: 80
